<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

<!--        <item-->
<!--            android:id="@+id/nav_for_confirmation"-->
<!--            android:icon="@drawable/ic_check_box_black_24dp"-->
<!--            android:title="@string/menu_for_confirmation" />-->

        <item
            android:id="@+id/nav_transaction"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_repots"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_history"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_remove_circle_outline_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
