<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dip">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_person_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/rider_details"
                        android:textColor="@color/teal"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:text="@string/r_id_num"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_birthdate"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_gender"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_address"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_mobile"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_license"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_other_details"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_other_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_zone"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_zone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_motorcycle"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_motorcycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_plateno"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_plateno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_motorcycle_other_details"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_motorcycle_other_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_bcode"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_bcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_username"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r_created_at"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account_view_details_create_at"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".90"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_account_view_details_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/orange"
                android:text="@string/close"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>