<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <!--            <ImageView-->
            <!--                android:id="@+id/ivLogLogo"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="160dp"-->
            <!--                android:layout_marginBottom="55dp"-->
            <!--                android:layout_marginTop="0dp"-->
            <!--                android:scaleType="fitCenter"-->
            <!--                android:src="@mipmap/logo_raider8"-->
            <!--                android:visibility="visible"/>-->

            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="55dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_raider9"
                android:visibility="visible" />


            <AutoCompleteTextView
                android:id="@+id/txtusername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/usernameReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="00021-2020"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />


            <AutoCompleteTextView
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="0dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="rider-2020"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/show_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:textColor="@color/blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/no_account_yet"
                    android:textColor="@color/black"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_createaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/create_account"
                    android:textColor="@color/blue"
                    android:visibility="visible" />
            </LinearLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/teal"
                android:text="@string/log_in"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/orange"
                android:text="@string/cancel"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/app_version"
                android:textColor="@color/gray" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="10dp"
                android:contentDescription="Social site button"
                android:src="@drawable/btn_twitter"
                android:visibility="invisible" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>